plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.sonarqube' version '7.2.3.7755'
}

group = 'four_tential'
version = '0.0.1-SNAPSHOT'
description = 'potential'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters'
}

repositories {
    mavenCentral()
}

dependencies {
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:4.3.0'

    // DB Migration (Flyway)
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-mysql'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Web MVC
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

    // Database Driver
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // OpenFeign QueryDSL
    implementation 'io.github.openfeign.querydsl:querydsl-core:7.1'
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jpa'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'

    // AWS
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:4.0.0')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'


    // Test - JPA
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'

    // Test - Redis
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'

    // Test - Flyway
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'

    // Test - Security
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'

    // Test - Validation
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'

    // Test - Web MVC
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

    // Test - Lombok
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Test Runtime
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Testcontainers
    testImplementation 'org.testcontainers:testcontainers:2.0.3'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.3'
    testImplementation 'com.redis:testcontainers-redis:2.2.4'

    // PortOne
    implementation 'io.portone:server-sdk:0.23.0'

    // QR code
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

jacoco {
    toolVersion = '0.8.13'
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')

    reports {
        xml.required = true
        csv.required = false
        html.required = true
    }
}

sonar {
    properties {
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.projectName', rootProject.name
        property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"

        def sonarProjectKey = System.getenv('SONAR_PROJECT_KEY')
        def sonarOrganization = System.getenv('SONAR_ORGANIZATION')

        if (sonarProjectKey) {
            property 'sonar.projectKey', sonarProjectKey
        }

        if (sonarOrganization) {
            property 'sonar.organization', sonarOrganization
        }

        property 'sonar.coverage.exclusions', [
            // Enum
            '**/domain/**/enums/**',
            '**/*Status.java',
            '**/*Role.java',
            '**/*Reason.java',
            '**/*PayWay.java',
            // Exception Enum & 공통 예외
            '**/exception/domain/**',
            '**/exception/ServiceErrorCode.java',
            '**/exception/ServiceErrorException.java',
            // 설정 클래스
            '**/*Config.java',
            // 어노테이션
            '**/annotation/**',
            // DTO / Record
            '**/dto/**',
            '**/model/request/**',
            '**/model/response/**',
            '**/port/PaymentGatewayRequest.java',
            '**/port/PaymentGatewayResponse.java',
            '**/principal/**',
            // Repository 인터페이스
            '**/*Repository.java',
            // 상수 / 베이스 엔티티 / 진입점
            '**/*Constants.java',
            '**/entity/BaseTime*.java',
            '**/PotentialApplication.java',
        ].join(',')
    }
}

tasks.named('sonar') {
    dependsOn tasks.named('jacocoTestReport')
}
